--- a/client/src/components/Layout/Container/Container.style.css
+++ b/client/src/components/Layout/Container/Container.style.css
@@ -14,8 +14,7 @@
     background: #303030;
     color: #c1c1c1;
     mix-blend-mode: normal;
-    box-shadow:  20px 20px 30px #292929,
-    -20px -20px 30px #373737;
+    box-shadow:  10px 10px 30px 0 #292929, -5px -5px 10px 0 #373737;
     border: 1px solid #303030;
     border-radius: 12px;
     margin-bottom: 1.25rem;
